FIX volume slider flickering when changing value"

--- a/src/SharedStyles/_typeface.scss
+++ b/src/SharedStyles/_typeface.scss
@@ -25,7 +25,7 @@ h2 {
   text-align: center;
 }
 .logo {
-  margin-top: 40px;
+  margin-top: 0;
   font-size: 3.5em;
   color: $color-accent;
   font-weight: 700;
